2005-12-08  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* build/Makefiles/gmake/gcc.mak: check configuration macro
	WITHOUT_STLPORT [useful for tests]; force usage of stlport
	headers first otherwise.

	* build/Makefiles/gmake/targetdirs.mak: fix catalogs creation
	procedure [loop through catalogs required]; comment problematic
	code when we have no good tools.

	* build/Makefiles/gmake/lib/gcc.mak: fix typo [FreeBSD]; fix
	set of libraries when link for FreeBSD; fix typo in macro name
	[FreeBSD again].

	* build/Makefiles/gmake/app/gcc.mak: fix set of libraries when
	link for FreeBSD; insert stlport lib in STDLIB set [when STLPORT
	in force], to avoid set one in application's makefile.

	* build/test/unit/gcc.mak: explicit refrence to libstlport in
	this makefile not required more [see message above].

	* build/Makefiles/gmake/lib/gcc.mak: remove names inherited from
	Complement project.

	* Build: building library and unit tests with cross [gcc 3.4.5]
	on Linux for FreeBSD 5.3.
	
2005-12-04  Francois Dumont  <dums@stlport...>

	* build/Makefiles/gmake/app/gcc.mak: Fix typo in FreeBSD configuration.

2005-12-02  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* repository: bump library version to 5.0.1 in branch STLPORT_5_0

2005-11-29  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/cxa.c: mutex should be recursive-safe, due to __cxa_finalize
	may be called recursive.

2005-11-27  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* build/Makefiles/gmake/targets.mak, app/rules.mak, linux/rules-so.mak:
	use gcc instead of c++ as linker if there are no C++ objects.

	* src/cxa.c, build/misc/cxa_atexit/Makefile.inc, build/misc/cxa_atexit/gcc.mak:
	workaround for bugged __cxa_finalize; use builded libcxa.so in LD_PRELOAD or
	/etc/ld.so.preload in Linux system with bugged glibc. See also
	http://gcc.gnu.org/bugzilla/show_bug.cgi?id=24189

2005-11-24  Francois Dumont  <dums@stlport...>
