@@ -20,6 +20,10 @@
 #  define _STLP_DONT_POP_HEADER_ID
 #endif
 
+#if defined(_STLP_WCE_EVC3)
+struct _exception;
+#endif
+
 #include _STLP_NATIVE_C_HEADER(limits.h)
 
 #if (_STLP_OUTERMOST_HEADER_ID == 0x201)
@@ -29,8 +33,3 @@
 #  endif
 #  undef  _STLP_DONT_POP_HEADER_ID
 #endif
-
-/* Local Variables:
- * mode:C++
- * End:
- */
